syntax = "proto3";

package cgroup_manager;

message SuperPodMetrics {
  double cpu_utilization = 1;
}
